Added Hero Page, and Improved Login Page with Unified Color theme

--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,18 @@
   font-weight: 200;
   font-style: normal;
 } */
+
+.nunito {
+  font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.jetbrains {
+  font-family: "JetBrains Mono", monospace;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
+@plugin "tailwind-corner-smoothing";
